[tool.poetry]
name = "pymongo-stuff"
version = "0.1.0"
description = ""
authors = ["hckr"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.11.3"
mongoengine = "^0.23.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
